Removes additional fonts
-removes old styles from programs sheets
-removes old fonts
-moves “edit this page” styles to styles to import

--- a/development/terminalfour/src/sass/ContentTypes/_programs.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_programs.scss
@@ -4,13 +4,6 @@
   margin-bottom:15px;
 
 }
-// .pageTitle {
-//   height:200px;
-//   padding-left: 15px;
-//   font-size: 3rem;
-// font-weight:200;
-//
-// }
 
 section.filter-titles {
     background: #1B557A;
@@ -19,12 +12,6 @@ section.filter-titles {
     color: white;
     margin-bottom: 10px;
 }
-
-// .btn{
-//     text-align: left;
-//     font-weight: normal !important;
-// width: 100%;
-// }
 
 .card {
     margin-bottom: 15px;
@@ -138,34 +125,34 @@ a:focus, a:hover {
 //     background-color: #EFEFEF;
 // }
 
-.content a:hover {
-   color: #003663;
-   border-bottom: 1px solid #adadad;
- }
- .hero {
-   border-bottom: 3px solid #c50f3c;
- }
+// .content a:hover {
+//    color: #003663;
+//    border-bottom: 1px solid #adadad;
+//  }
+ // .hero {
+ //   border-bottom: 3px solid #c50f3c;
+ // }
  .programtitle {
    color: white;
    font-size: 30pt;
    line-height: 24pt;
  }
- h2 {
-   color: #00457c;
-   font-size: 3em;
-   font-weight: 500;
- }
-  h3 {
-   color: rgb(98, 97, 97);
- }
- h4 {
-   color: #c50f3c;
-   font-style: bold;
-   font-size: 1.75em;
- }
- .btn .btn-default .btn-block .btn-lg {
-   border-radius: 0;
- }
+ // h2 {
+ //   color: #00457c;
+ //   font-size: 3em;
+ //   font-weight: 500;
+ // }
+ //  h3 {
+ //   color: rgb(98, 97, 97);
+ // }
+ // h4 {
+ //   color: #c50f3c;
+ //   font-style: bold;
+ //   font-size: 1.75em;
+ // }
+ // .btn .btn-default .btn-block .btn-lg {
+ //   border-radius: 0;
+ // }
  #programHeader {
    margin-top: 1em;
    margin-bottom: 2em;
