adds link column calls to action styles
This styles should be removed after launch from the content type

--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -255,3 +255,15 @@ a.t4Edit-page:hover {
     text-decoration: none !important;
   	border-bottom: none !important;
 }
+
+
+// Link Column callstoaction
+
+#callstoaction {
+    background-color: gray;
+    width: 100%;
+    margin-bottom: 15px;
+    padding-left: 25px;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
