--- a/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_stylestoimport.scss
@@ -1,7 +1,8 @@
 body {
   // background: #E9EDF1;
   margin-top: 70px;
-  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
+  font-style: normal;
   font-weight: 400;
   font-size: 1rem;
   color: #1e1e1e;
@@ -104,7 +105,8 @@ img {
   cursor: pointer
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Karla', Open Sans, helvetica, arial, sans-serif;
+  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
+  font-style: normal;
   font-weight: 400;
 }
 h1 {
