--- a/development/terminalfour/src/sass/ContentTypes/_variables.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_variables.scss
@@ -2,7 +2,9 @@
 .custombtn {
     background: #e5e5e5;
     color: #00447c uppercase;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Gotham A', 'Gotham B', sans-serif;
+    font-style: normal;
+    font-weight: 400;
     font-size: 1.125rem;
 }
 
