--- a/app/styles/ContentTypes/_stylestoimport.scss
+++ b/app/styles/ContentTypes/_stylestoimport.scss
@@ -128,7 +128,9 @@ body {
   cursor: pointer
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: 'Raleway', Open Sans, helvetica, arial, sans-serif;
+  font-family: 'Gotham A', 'Gotham B', Open Sans, helvetica, arial, sans-serif;
+  font-style: normal;
+  font-weight: 400;
 }
 h1 {
   padding-left: .5em;
