--- a/development/terminalfour/src/html/includes/content.html
+++ b/development/terminalfour/src/html/includes/content.html
@@ -454,25 +454,9 @@
         <span class="degreeType" >Bachelor of Music</span>
    </div>
   </a>
- </div><!-- Edited by MGW 06-26-15  -->
-    <div class="col-xs-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <a data-toggle="collapse" href="#109899">
-                        <h4 class="panel-title">
-                            Accordion Title of Slide Down Panel Content Type
-                            <i class="fa fa-chevron-down pull-right"></i>
-                        </h4>
-                    </a>
-                </div>
-                <div id="109899" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <p>Body of Slide Down Panel Content Type. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. <br /><br />Curabitur sodales ligula in libero. Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia aliquet.</p>
-                    </div>
-                </div>
+ </div>
 
-            </div>
-    </div><!--Slideshow Gallery Content Type-->
+    <!--Slideshow Gallery Content Type-->
 
 <style>
 .carousel-inner {
