--- a/development/terminalfour/src/sass/ContentTypes/_panel.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_panel.scss
@@ -9,10 +9,10 @@
     font-size: 24px;
 }
 .panel-default > .panel-heading {
-    background: grey;
+    background: black;
     color: #fff;
     font-size: 1.5em;
-    // border-color: #00447C;
+    border-color: black;
 }
 .panel-title {
     color: #fff;
@@ -27,9 +27,7 @@
 .panel-danger>.panel-heading {
     background: #d63647;
     color: white;
-    border-color: #df1300;
-    font-weight: 700;
-    font-size: 24px;
+    border-color: #d63647;
 }
 
 .panel-danger {
