update font weights to specs

--- a/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
@@ -4,6 +4,7 @@
     a {
         &:hover, &:active, &:focus {
             text-decoration: none;
+            font-weight: 700;
         }
     }
 .siteheader {
