--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -9353,7 +9353,7 @@ footer {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  background-position: center bottom;
+  background-position: center top;
 }
 
 /* For the background color gradient in mobile */
