format secondary nav menu (phase 1)

--- a/development/terminalfour/src/html/includes/homepage-second-nav.html
+++ b/development/terminalfour/src/html/includes/homepage-second-nav.html
@@ -1,3 +1,13 @@
 <section class="homepage-feature" id="homepage-second-nav" style="background-image:url(../media/RYOR_bg_extended.png);">
-  <span>Current Students </span>   <span>Catalog</span>   <span>Athletics</span>
+  <ul>
+    <li>
+      Current Students
+    </li>
+    <li>
+      Catalog
+    </li>
+    <li>
+      Athletics
+    </li>
+  </ul>
 </section>
