--- a/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-base.scss
@@ -11,7 +11,9 @@
     padding-bottom: torem(36, $small-unit);
     background-color: $gray-base;
     svg { fill: currentColor; }
-
+    text-align: center;
+    font-family: 'Gotham A', 'Gotham B';
+    font-weight: 500;
 }
 .homepage-feature-block {
     @include make-sm-column(12);
