--- a/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
@@ -9,11 +9,20 @@ margin-top: 0px;
 // margin-bottom: torem(8);
 padding: 0;
 position: relative;
-height:100px;
- span{
-   color:#fff;
-   font-size:2.5rem;
-   margin-top:15px;
-   margin-bottom:15px;
- }
+height: 3em;
+color:#fff;
+//  font-size:2.5rem;
+margin-top:15px;
+margin-bottom:15px;
+}
+
+.homepage-feature ul, {
+  list-style-type: none;
+  // display: inline-block;
+  display: table;
+  width: 100%;
+}
+
+.homepage-feature li {
+  display: table-cell;
 }
