--- a/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
@@ -12,8 +12,8 @@ position: relative;
 height: 3em;
 color:#fff;
 //  font-size:2.5rem;
-margin-top:15px;
-margin-bottom:15px;
+// margin-top:15px;
+// margin-bottom:15px;
 }
 
 .homepage-feature ul, {
@@ -21,6 +21,10 @@ margin-bottom:15px;
   // display: inline-block;
   display: table;
   width: 100%;
+  table-layout: fixed;
+  margin-top: 9px;
+  padding-left: 0;
+  font-size: 1.2rem;
 }
 
 .homepage-feature li {
