--- a/development/terminalfour/src/html/includes/homepage-second-nav.html
+++ b/development/terminalfour/src/html/includes/homepage-second-nav.html
@@ -4,7 +4,7 @@
       Current Students
     </li>
     <li>
-      Catalog
+      Schedules, Calendar &#38; Catalog
     </li>
     <li>
       Athletics
