--- a/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
+++ b/development/terminalfour/src/sass/msu-partials/_homepage-second-nav.scss
@@ -18,7 +18,6 @@ color:#fff;
 
 .homepage-feature ul, {
   list-style-type: none;
-  // display: inline-block;
   display: table;
   width: 100%;
   table-layout: fixed;
@@ -29,4 +28,14 @@ color:#fff;
 
 .homepage-feature li {
   display: table-cell;
+}
+
+#homepage-second-nav {
+  display: none;
+}
+
+@media (min-width: $screen-md-min) {
+  #homepage-second-nav {
+    display: block;
+  }
 }
