add transition effects on button hover; change menu item colors/weights

--- a/development/terminalfour/src/html/includes/homepage-second-nav.html
+++ b/development/terminalfour/src/html/includes/homepage-second-nav.html
@@ -1,13 +1,13 @@
-<section class="homepage-feature" id="homepage-second-nav" style="background-image:url(../media/RYOR_bg_extended.png);">
+<section class="homepage-feature" id="homepage-second-nav">
   <ul>
     <li>
-      Current Students
+      <a href="">Current Students</a>
     </li>
     <li>
-      Schedules, Calendar &#38; Catalog
+      <a href="">Schedules, Calendar &#38; Catalog</a>
     </li>
     <li>
-      Athletics
+      <a href="">Athletics</a>
     </li>
   </ul>
 </section>
