reformat header: remove tertiary nav bar, change secondary nav elements

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -1,6 +1,7 @@
 /* MainHeaderNavigation Styles */
 .blue-header {
-  background: #00447c;
+  // background: #00447c;
+  background-image:url(../media/RYOR_bg_extended.png);
 }
 
 .navbar .navbar-collapse {
@@ -385,7 +386,7 @@
   cursor: pointer;
 }
 
-.faculty-staff a {
+.faculty-staff-students a {
   font-family: 'Gotham A', 'Gotham B', sans-serif;
   font-style: normal;
   font-weight: 400;
@@ -615,8 +616,8 @@
   .container .pushdown-menu {
     border-right: 1px solid #4cb4f2;
   }
-  .faculty-staff a {
-    display: block;
+  .faculty-staff-students a {
+    display: inline-block;
   }
   #nav-faculty {
     width: 11em;
