--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -391,11 +391,14 @@
   font-style: normal;
   font-weight: 400;
   letter-spacing: 3px;
-  text-align: right;
   margin-top: -1.0em;
   color: #fff;
   padding-bottom: 0.6em;
   display: none;
+}
+
+col-xs-12, .faculty-staff-students {
+  text-align: right;
 }
 
 .navbar-nav > a > li {
