format mobile menu give-visit-apply, tac-staff-stud buttons

--- a/development/terminalfour/src/html/includes/header.html
+++ b/development/terminalfour/src/html/includes/header.html
@@ -21,12 +21,16 @@
               </div>
             </div>
         </div>
-
-
-
-
         <nav class="navbar-collapse collapse" id="content-nav">
-
+            <div>
+              <button type="button" class="btn btn-default visit-give-mobile">Visit</button>
+              <button type="button" class="btn btn-default visit-give-mobile">Give</button>
+              <button type="button" class="btn btn-default apply-mobile">Apply</button>
+              <ul class="fac-staf-stu-mobile">
+                <li><a href="">Current Students</a></li>
+                <li><a href="">Faculty &amp; Staff</a></li>
+              </ul>
+            </div>
             <ul class="nav navbar-nav navbar-center dropdown" id="nav-middle">
               <li id="nav-faculty">
                 <a class="mobile-header mobile-about">About<span class="fa fa-chevron-down pull-right"></span></a>
