--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -176,6 +176,10 @@
   cursor: pointer;
 }
 
+#nav-search .fa-search {
+  padding-left: 1em;
+}
+
 .fa-search-opened {
   color: #717171 !important;
   padding-top: 10px;
@@ -728,6 +732,11 @@ col-xs-12, .faculty-staff-students {
   }
   .mobile-header {
     margin-top: 5px;
+  }
+
+  .athletics-header {
+    margin-top: 5px;
+    border-right: 1px solid #337ab7;
   }
 
   #content-nav #nav-search-close {
