--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7582,6 +7582,10 @@ header {
   cursor: pointer;
 }
 
+#nav-search .fa-search {
+  padding-left: 1em;
+}
+
 .fa-search-opened {
   color: #717171 !important;
   padding-top: 10px;
@@ -8169,6 +8173,11 @@ col-xs-12, .faculty-staff-students {
 
   .mobile-header {
     margin-top: 5px;
+  }
+
+  .athletics-header {
+    margin-top: 5px;
+    border-right: 1px solid #337ab7;
   }
 
   #content-nav #nav-search-close {
