fixes many of the sidebar colors and site header

--- a/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_SiteHeader.scss
@@ -1,5 +1,5 @@
 #site-header {
-    background: url('../media/eventsbg.jpg') ;
+    background: #003a6e;
     margin-bottom: 25px;
     background-size: 100%;
     a {
