--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -340,7 +340,7 @@
 }
 
 .fa-bars {
-  background-color: #005fae;
+  background-color: #003a6e;
   padding: 24px;
   margin: -17px -30px -16px -16px;
 }
