--- a/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
+++ b/development/terminalfour/src/sass/ContentTypes/_navmenu.scss
@@ -6,7 +6,7 @@
   transition: all .2s ease-out
 }
 #layout {
-  z-index: 9998;
+  z-index: 998;
   padding-left: 200px;
   left: 0;
   top: 100px
@@ -30,15 +30,25 @@
   color:black;
   font-size:1.2rem;
   font-weight:700;
-  padding: 10px 20px 10px 10px;
+  padding: 15px 20px;
   line-height: 1em;
+  display: block;
+  line-height: 1em;
+  // color: #fff;
+  // padding-top: 10px;
+  // padding-bottom: 10px;
+  // padding-left: 10px;
+  text-decoration: none;
   -webkit-transition: all .25 ease-in-out;
   -moz-transition: all .25 ease-in-out;
   -o-transition: all .25 ease-in-out;
   transition: all .25 ease-in-out
 }
-#menu a:hover {
-  color: #1b557a;
+#menu a:hover, .pure-menu li a:focus, #menu .pure-menu li a:hover {
+  color: #d11242;
+  // line-height: 1em;
+  // font-size: 2em;
+  padding: 15px 15px;
   -webkit-transition: all .25 ease-in-out;
   -moz-transition: all .25 ease-in-out;
   -o-transition: all .25 ease-in-out;
@@ -52,11 +62,9 @@
 #menu .pure-menu, #menu .pure-menu ul {
   border: none;
 }
-#menu .pure-menu li a:focus, #menu .pure-menu li a:hover {
+#menu  {
   // background: #fff;
-  line-height: 1em;
-  color: #1b557a;
-  padding: 10px 15px
+
 }
 #menu .pure-menu-heading, #menu .pure-menu-selected {
   // background: #333;
@@ -115,12 +123,13 @@
   height: .2em
 }
 .menu-link:focus span:after, .menu-link:focus span:before, .menu-link:hover span:after, .menu-link:hover span:before {
+  content: " ";
   background: #fff;
   width: 100%;
   height: .2em;
   position: absolute;
   margin-top: -.6em;
-  content: " "
+
 }
 .menu-link:focus span:after, .menu-link:hover span:after {
   margin-top: .6em
@@ -137,6 +146,47 @@
 .multilevel-linkul-2 {
     margin-left: -20px;
 }
+
+.sidebar-nav {
+  margin-bottom: 15px;
+  // background: #002856;
+    ul li {
+      list-style-type: none;
+      border-bottom: 1px solid gray;
+      // border-width: 100%;
+    }
+
+    ul li:last-child {
+        border-bottom: none;
+    }
+
+    li a {
+
+    }
+
+     li a:hover {
+      // background: #eeeeee;
+      -webkit-transition: all .25s ease-in-out;
+      -moz-transition: all .25s ease-in-out;
+      -o-transition: all .25s ease-in-out;
+      transition: all .25s ease-in-out;
+      position: relative;
+      padding: 10px 15px
+    }
+}
+
+// .sidebar-nav li:after {
+//   -webkit-transition: all .25s ease-in-out;
+//   -moz-transition: all .25s ease-in-out;
+//   -o-transition: all .25s ease-in-out;
+//   transition: all .25s ease-in-out
+// }
+
+.currentbranch0 a , .currentbranch1 a, .currentbranch2 a, .currentbranch3 a, .currentbranch4 a {
+  color: #d11242 !important;
+  font-size: 1.2em;
+}
+
 
 @media (max-width: 767px) {
   // .header {
@@ -178,44 +228,4 @@
     margin: 0 auto;
     width: 100%
   }
-}
-.sidebar-nav {
-  margin-bottom: 15px;
-  // background: #002856;
-}
-.sidebar-nav ul li {
-  list-style-type: none
-}
-
-.sidebar-nav li a {
-  display: block;
-  line-height: 1em;
-  // color: #fff;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  text-decoration: none
-}
-
-.sidebar-nav li a:hover {
-  background: #eeeeee;
-  -webkit-transition: all .25s ease-in-out;
-  -moz-transition: all .25s ease-in-out;
-  -o-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out;
-  position: relative;
-  padding: 10px 15px
-}
-
-.sidebar-nav li:after {
-  -webkit-transition: all .25s ease-in-out;
-  -moz-transition: all .25s ease-in-out;
-  -o-transition: all .25s ease-in-out;
-  transition: all .25s ease-in-out
-}
-
-
-
-.currentbranch0 a , .currentbranch1 a, .currentbranch2 a, .currentbranch3 a, .currentbranch4 a {
-  color: #d11242;
 }
