--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7749,7 +7749,7 @@ header {
 }
 
 .fa-bars {
-  background-color: #005fae;
+  background-color: #003a6e;
   padding: 24px;
   margin: -17px -30px -16px -16px;
 }
