--- a/www-root/style-assets/css/style.css
+++ b/www-root/style-assets/css/style.css
@@ -7427,18 +7427,32 @@ header {
   color: #fff;
   font-size: 25px;
 }
-.toolbar ul a li {
+.toolbar ul li {
   font-family: "Gotham A", "Gotham B", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #00447c;
-  padding-left: 1.5em;
-  padding-right: 1.4em;
+  padding-right: 0.6em;
+  padding-left: 0.5em;
   -webkit-transition: all 0.25s ease-in-out;
   -moz-transition: all 0.25s ease-in-out;
   -o-transition: all 0.25s ease-in-out;
   transition: all 0.25s ease-in-out;
 }
-.toolbar ul a li:hover {
+.toolbar ul li:hover {
   color: #333;
+}
+
+#nav-faculty, #nav-academics, #nav-alumni {
+  padding-left: 0px;
+  padding-right: 0px;
+}
+
+.pushdown-alumni {
+  padding-left: 1.2em !important;
+}
+
+#nav-admissions .mobile-header {
+  padding-left: 0px;
+  padding-right: 0px;
 }
 
 .navbar {
@@ -7779,11 +7793,6 @@ header {
 .nav .open > a, .nav .open > a:focus, .nav .open > a:hover {
   background-color: transparent;
   border-color: transparent;
-}
-
-.pushdown-menu > li > a {
-  font-weight: 600;
-  font-size: 1.2em;
 }
 
 .search-input-mobile {
@@ -8139,7 +8148,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   .pushdown-menu {
-    height: 27em;
+    height: 19em;
   }
 
   .fac-staf-stu-mobile {
@@ -8181,7 +8190,8 @@ col-xs-12, .faculty-staff-students {
 
   .athletics-header {
     margin-top: 5px;
-    border-right: 1px solid #337ab7;
+    padding-left: 0px;
+    padding-right: 0px;
   }
 
   #content-nav #nav-search-close {
@@ -8259,7 +8269,7 @@ col-xs-12, .faculty-staff-students {
     left: 17em;
   }
 
-  li .pushdown-menu {
+  a .pushdown-menu {
     font-weight: 500;
     font-size: 0.8em;
   }
@@ -8298,7 +8308,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   .pushdown-menu {
-    height: 26em;
+    height: 19em;
   }
 }
 @media only screen and (min-width: 1358px) {
@@ -8371,7 +8381,7 @@ col-xs-12, .faculty-staff-students {
   }
 
   .pushdown-menu {
-    height: 22em;
+    height: 19em;
   }
 }
 @media only screen and (min-width: 1500px) {
