make desktop search glyphicon white w/ blue square bkgd

--- a/development/terminalfour/src/sass/msu-partials/_global-header.scss
+++ b/development/terminalfour/src/sass/msu-partials/_global-header.scss
@@ -189,7 +189,13 @@
 }
 
 #nav-search .fa-search {
-  padding-left: 1em;
+  color: #fff !important;
+  background: #005fae;
+  margin-top: 0.4em;
+  padding-left: 0.8em;
+  padding-right: 1.7em;
+  padding-top: 0.5em;
+  padding-bottom: 0.5em;
 }
 
 .fa-search-opened {
